; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_rtr.c_rtrcmd.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_rtr.c_rtrcmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"http://%s:%s/%s%s\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"\0A\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i32, i8*)* @rtrcmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @rtrcmd(i64 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca { i64, i32 }, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %6, i32 0, i32 0
  store i64 %0, i64* %13, align 4
  %14 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %6, i32 0, i32 1
  store i32 %1, i32* %14, align 4
  %15 = bitcast %struct.TYPE_3__* %5 to i8*
  %16 = bitcast { i64, i32 }* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 %16, i64 12, i1 false)
  store i8* %2, i8** %7, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i8* @r_str_uri_encode(i8* %17)
  store i8* %18, i8** %10, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i8*, i8** %10, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %29

27:                                               ; preds = %3
  %28 = load i8*, i8** %10, align 8
  br label %31

29:                                               ; preds = %3
  %30 = load i8*, i8** %7, align 8
  br label %31

31:                                               ; preds = %29, %27
  %32 = phi i8* [ %28, %27 ], [ %30, %29 ]
  %33 = call i8* @r_str_newf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %22, i32 %24, i8* %32)
  store i8* %33, i8** %11, align 8
  %34 = load i8*, i8** %10, align 8
  %35 = call i32 @free(i8* %34)
  %36 = load i8*, i8** %11, align 8
  %37 = call i8* @r_socket_http_get(i8* %36, i32* null, i32* %12)
  store i8* %37, i8** %9, align 8
  %38 = load i8*, i8** %11, align 8
  %39 = call i32 @free(i8* %38)
  %40 = load i8*, i8** %9, align 8
  %41 = icmp ne i8* %40, null
  br i1 %41, label %42, label %65

42:                                               ; preds = %31
  %43 = load i8*, i8** %9, align 8
  %44 = load i32, i32* %12, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %43, i64 %45
  store i8 0, i8* %46, align 1
  %47 = load i8*, i8** %9, align 8
  %48 = call i8* @strstr(i8* %47, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i8* %48, i8** %8, align 8
  %49 = load i8*, i8** %8, align 8
  %50 = icmp ne i8* %49, null
  br i1 %50, label %51, label %55

51:                                               ; preds = %42
  %52 = load i8*, i8** %8, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 1
  %54 = call i8* @strstr(i8* %53, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i8* %54, i8** %8, align 8
  br label %55

55:                                               ; preds = %51, %42
  %56 = load i8*, i8** %8, align 8
  %57 = icmp ne i8* %56, null
  br i1 %57, label %58, label %61

58:                                               ; preds = %55
  %59 = load i8*, i8** %8, align 8
  %60 = getelementptr inbounds i8, i8* %59, i64 2
  br label %63

61:                                               ; preds = %55
  %62 = load i8*, i8** %9, align 8
  br label %63

63:                                               ; preds = %61, %58
  %64 = phi i8* [ %60, %58 ], [ %62, %61 ]
  store i8* %64, i8** %4, align 8
  br label %66

65:                                               ; preds = %31
  store i8* null, i8** %4, align 8
  br label %66

66:                                               ; preds = %65, %63
  %67 = load i8*, i8** %4, align 8
  ret i8* %67
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @r_str_uri_encode(i8*) #2

declare dso_local i8* @r_str_newf(i8*, i32, i32, i32, i8*) #2

declare dso_local i32 @free(i8*) #2

declare dso_local i8* @r_socket_http_get(i8*, i32*, i32*) #2

declare dso_local i8* @strstr(i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
